--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@
   height: 7px;
   padding: 15px 30px 0 20px;
   border-radius: 0 0 5px 5px;
-  background: #c50c1a url(https://cdn.glitch.com/5afb9eb8-2a52-461a-ac40-eb9a75f2caee%2Fbg-bouton-unistra.png?1554240156101) no-repeat right top;
+  background: #c50c1a url(bg-bouton-unistra.png) no-repeat right top;
   position: absolute;
   right: 0px;
   top: 264px;
